# ChangeLog for dev-util/subversion
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.286 2007/12/28 15:25:15 hollow Exp $

  28 Dec 2007; Benedikt Böhm <hollow@gentoo.org> subversion-1.4.6.ebuild:
  fix #203564

*subversion-1.4.6 (28 Dec 2007)

  28 Dec 2007; Benedikt Böhm <hollow@gentoo.org>
  -files/subversion-1.3.2-neon-0.26.patch,
  -files/subversion-1.4.3-neon-0.26.3.patch, metadata.xml,
  -subversion-1.3.2-r4.ebuild, -subversion-1.4.4-r4.ebuild,
  +subversion-1.4.6.ebuild:
  version bump (fixes #128624, #203257 and maybe #199639, #200082); cleanup

  14 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  subversion-1.4.5.ebuild:
  Stable on amd64 wrt bug #198590.

  13 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  subversion-1.4.5.ebuild:
  ppc stable, bug #198590

  12 Nov 2007; Markus Rothe <corsair@gentoo.org> subversion-1.4.5.ebuild:
  Stable on ppc64; bug #198590

  12 Nov 2007; Jeroen Roovers <jer@gentoo.org> subversion-1.4.5.ebuild:
  Stable for HPPA (bug #198590).

  11 Nov 2007; Raúl Porcel <armin76@gentoo.org> subversion-1.4.5.ebuild:
  alpha/ia64 stable wrt security #198590

  11 Nov 2007; Markus Ullmann <jokey@gentoo.org> subversion-1.4.5.ebuild:
  SPARC'enstein

  11 Nov 2007; Dawid Węgliński <cla@gentoo.org> subversion-1.4.5.ebuild:
  Stable on x86 (bug #198590)

*subversion-1.4.5 (10 Nov 2007)

  10 Nov 2007; Benedikt Böhm <hollow@gentoo.org>
  -files/subversion-swig.m4-ruby.patch, -subversion-1.1.3.ebuild,
  -subversion-1.2.3-r3.ebuild, -subversion-1.4.4-r3.ebuild,
  +subversion-1.4.5.ebuild:
  version bump; fixes #84539, #168348, #179139, #188897, #194833

  26 Sep 2007; Caleb Tennis <caleb@gentoo.org> subversion-1.4.4-r4.ebuild:
  Fix perl dep to be more...up to date

  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org>
  subversion-1.4.4-r4.ebuild:
  fix small typo

*subversion-1.4.4-r4 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org>