@@ -17,8 +17,8 @@ AUX vc-svn.el 16847 RMD160 8665b9a34c8fd9acae40e18aac33026aff3a39d7 SHA1 4d1a5a9
 DIST subversion-1.3.2.tar.bz2 6834364 RMD160 dc9fbe683379ce25a62b91810eb5652ead19abcf SHA1 688ab178db1f6acb2ad3bd99f030402621f837b6 SHA256 805cb0ee894d2c219fe979dde98ccd56c06de6c3ca3986d87c80a2a2bcc08185
 DIST subversion-1.4.5.tar.bz2 4722624 RMD160 159f3eac9168d856a19ffb235c5417757cd5a496 SHA1 acc80381cb670736ad626fee1eb04f36ba7e5fc8 SHA256 763b8c9c16c03adc3ad00ccf1b5b47a08b5ffe94e499d3c87bb02acbc1026b53
 DIST subversion-1.4.6.tar.bz2 4680316 RMD160 ae63877b5d0eeb1c4f28c4388f97897efde7244c SHA1 a9c941e2309744f6a2986200698b60da057a7527 SHA256 6c480c3493b25c4b73fa62d5fef2f8dd40dde1eb1294c53d3495d864230fc124
-EBUILD subversion-1.3.2-r3.ebuild 11737 RMD160 c824757ed12ab85aced578f00c15279329de7d9e SHA1 a1a9ed9edb7e8b220f9f0d303fc19bbdf674c21e SHA256 cec2156983c11ae468227dc723298135bba25b08c506c96788e4dae8b8851c00
-EBUILD subversion-1.4.5.ebuild 14284 RMD160 cebccae7957beb302fa665e17cb84e0d50e6e4a0 SHA1 b0af2ec9d8a798142fcb8fcfda6d22b932e7f372 SHA256 572d37a69f99d4bb0a181ff8eb2afd0e99a0d6dc653f48f9f044db1df86988e7
-EBUILD subversion-1.4.6.ebuild 14340 RMD160 dad3a9fd1a001f512e88ad2919214a3e13a8b9a5 SHA1 b6f40a6fd9a8cf21fc5ffb59352cc0d2f0a21332 SHA256 da669eb793e964856d19249aa1391d78a1c6fb2b6f49d0e79b13ffff54fcb5bd
-MISC ChangeLog 49704 RMD160 14ca0386c373ef3284b6a88d510e59bda5333dbd SHA1 b3f1d5426b3787495d50ae007a02317f2325a2e5 SHA256 b97df27c3e2062bbecd071336e57a8ad9af76df1b7a90c60b20e30af9c8b630b
+EBUILD subversion-1.3.2-r3.ebuild 11755 RMD160 580b2adfdc2955b0bf4cc3d65c253e1802a4a3ad SHA1 1e9ebbf77b7891719b94c3f36c3cf1440979fccc SHA256 0006a92c89520487b550609946f24d79d5e515d5e149263e5d267294782424ac
+EBUILD subversion-1.4.5.ebuild 14302 RMD160 dc491b804912dc6eda272cde2a3c4beb8c2db5e4 SHA1 00102dfd7cd1844f515730ceb345351502434638 SHA256 36dc627b91de6442b0bacc31bcfb4f0ef83b51d02860745193f30a4384aeec7b
+EBUILD subversion-1.4.6.ebuild 14362 RMD160 300a6556f0b0da148ea8c4599bc2df188b8e6e54 SHA1 7128b892965f2cc28fcc363d062c3ff709cf6929 SHA256 cec82a4948b8d8a5002ae5860bd22517a056e6cc4487e24da3aec5e3c62b1064
+MISC ChangeLog 49794 RMD160 bb030aebdf61e805482ebacb158ad252bd2113d8 SHA1 8dd2a33e9f7f1c8a9d01296cd2817b9681db368d SHA256 4201c4ba1583fd1a3c549a0d014f2ad34e2494646c1518f8e03326387d25fee2
 MISC metadata.xml 160 RMD160 a0f6e133e170b7477018d8584c20e8723f6914fa SHA1 a3b9b520ec43ee1f9b1c7b5c5b8745bf84454c03 SHA256 3c312146c4cb5b912d6f56292242ce3a85c629ca98ee7ef0a84ca575708b44fe
